# azure_pr_puller

./: .env_sample  Cargo.toml
azure_work/: Cargo.toml
azure_work/src/: azure.rs  console_writer.rs  main.rs  notification_service.rs  stdin_configuration_provider.rs
azure_work_lib/: Cargo.toml
azure_work_lib/src/: azure.rs  azure_configuration.rs  lib.rs  models.rs
configuration/: Cargo.toml
configuration/src/: config_file.rs  configuration_manager.rs  configuration_manager_factory.rs  configuration_reader_error.rs  file_configuration_storage.rs  lib.rs
puller-ui/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
puller-ui/src/: App.svelte  CommentThreads.svelte  Configuration.svelte  Header.svelte  PullRequests.svelte  Reviewer.svelte  app.css  commands.ts  helpers.ts  interfaces.ts
puller-ui/src-tauri/: Cargo.toml  tauri.conf.json
puller-ui/src-tauri/icons/: icon.icns
puller-ui/src-tauri/src/: lib.rs  main.rs  notification_service.rs
src/: azure.rs  configuration_reader.rs  main.rs  models.rs
src/configuration/: azure_configuration.rs  configuration.rs  configuration_manager.rs  configuration_reader.rs  configuration_reader_error.rs  configuration_storage.rs  file_configuration_provider.rs  file_configuration_storage.rs  mod.rs  stdin_configuration_provider.rs
