[package]
name = "azure_work_lib"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
dotenv = "0.15.0"
uuid = {version = "1.4.1", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
configuration = { path = "../configuration" }