[package]
name = "azure_work_lib"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
configuration = { path = "../configuration" }
anyhow = "1.0.97"
